<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="36dp"
        android:paddingTop="24dp"
        android:paddingEnd="36dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nsv_details">

        <TextView
            android:id="@+id/tv_no_pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_don_t_have_a_pan"
            android:textColor="@color/color_primary"
            android:textSize="18sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_next" />

        <TextView
            android:id="@+id/tv_tnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/tnc"
            android:textColor="@color/color_description"
            android:textColorLink="@color/color_primary"
            android:textSize="14sp"

            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:enabled="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_no_pan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tnc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="36dp"
        android:paddingTop="24dp"
        android:paddingEnd="36dp"
        android:paddingBottom="24dp"

        app:layout_constraintBottom_toTopOf="@+id/cl_other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_birth_date">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_birth_day"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/color_primary"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="2"
                        android:paddingStart="8dp"
                        android:paddingTop="14dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="14dp"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_birth_month"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"

                    android:layout_weight="1"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/color_primary"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="2"
                        android:paddingStart="8dp"

                        android:paddingTop="14dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="14dp"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_birth_year"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_weight="2"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/color_primary"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="4"
                        android:minWidth="100dp"

                        android:paddingStart="8dp"
                        android:paddingTop="14dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="14dp"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textColor="@color/color_description"
                android:textSize="@dimen/description"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_pan_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_logo" />

            <TextView
                android:id="@+id/tv_pan_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/pan_number"
                android:textAllCaps="true"
                android:textColor="@color/color_description"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/til_pan_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <TextView
                android:id="@+id/tv_birth_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/birth_date"
                android:textAllCaps="true"
                android:textColor="@color/color_description"
                android:textSize="12sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toTopOf="@+id/ll_birth_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_pan_number" />

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_text"
                android:textColor="@color/color_logo"
                android:textSize="@dimen/log_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pan_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/color_primary"
                app:boxStrokeWidthFocused="1dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_birth_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/tv_pan_header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_pan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:imeOptions="actionNext"
                    android:maxLength="10"
                    android:paddingStart="8dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="14dp"
                    android:singleLine="true"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>